--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -23,8 +23,7 @@ csasdown::csas_table(d,
             #)
 ```
 
-
-The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions  (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival (although there are some scale/growth data in @debertinMarineGrowthPatterns2017). Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated status assessment has not been developed for ISC chum. *\textcolor{cyan}{LW: Does @godboutStockStatusWild2004 not count as a full status assessment?}*. 
+The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions  (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival (although there are some scale/growth data in @debertinMarineGrowthPatterns2017). Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated status assessment has not been developed for ISC chum. *\textcolor{cyan}{LW: Does @godboutStockStatusWild2004 not count as a full status assessment?}*.
 
 Step 3 of the Guidelines for Applying LRPs gives guidance on what evidence would be required to use known status of some CUs for other CUs that are data-limited. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and habitat capacity (Guidelines paper, Section 4.1.3). 
 
@@ -42,29 +41,25 @@ knitr::include_graphics("figure/chum-map.png")
 
 ## DATA
 
-We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data.
+We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider spawner recruit series to be reliable enough to estimate stock recruitment-based benchmarks such as $S_{MSY}$ and $S_{gen}$.  We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
 
-Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider spawner recruit series to be reliable enough to estimate stock recruitment-based benchmarks such as $S_{MSY}$ and $S_{gen}$.  We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
-
-@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon chum CUs. More details can be found in Appendix \@ref(app:first-appendix). Note that we removed spawners for the Qualicum River, Little Qualicum River, and Puntledge River (Georgia Strait CU), as these systems have been nearly 100% enhanced at least since enhancement began at these locations. We made the assumption that these streams had 100% hatchery origin spawners. <!--CH to revise this paragraph to align with Whither et al. 2018-->
+@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon chum CUs. More details can be found in Appendix \@ref(app:08-appendix-chum-data). Note that we removed spawners for the Qualicum River, Little Qualicum River, and Puntledge River (Georgia Strait CU), as these systems have been nearly 100% enhanced at least since enhancement began at these locations. We made the assumption that these streams had 100% hatchery origin spawners. <!--CH to revise this paragraph to align with Whither et al. 2018-->
 
 Links to data and analysis code repository are in Appendix \@ref(app:github-appendix). 
 
 ## CU STATUS ESTIMATION
 
 For this case study, we consider two approaches for characterizing CU status: 
-(1) Rapid Multidimensional Scanner Tool 
+(1) Pacific Salmon Scanner Tool (Salmon Scanner) 
 (2) CU-level abundance relative to a lower percentile benchmark
 
-The first approach, which uses the rapid  multidimensional scanning tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented or a point of comparison with the Rapid Multidimensional Scanner Tool."
+The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented or a point of comparison with the Salmon Scanner."
 
-When applying the Rapid Multidimensional Scanner Tool to ISC-NF Chum, we use percentile benchmarks as both upper and lower benchmarks (\@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
+When applying the Salmon Scanner to ISC-NF Chum, we use percentile benchmarks as both upper and lower benchmarks (\@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
 
 Percentile-based benchmarks can be applied to assess status of CUs when stock-recruitment data are not available (@holtEvaluatingBenchmarksBiological2018, @clarkEvaluationPercentileApproach2014). The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum stocks, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of $S_{gen}$ for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' $S_{gen}$ values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
 
-For this case study, percentile benchmarks were calculated using 
-<!--CH: add details on how percentiles calculated, were percentiles based on smoothed or raw time-series of historical data, and mention that the current generational geometric average was compared to the specified percentile-->
-
+For this case study, percentile benchmarks were calculated using the infilled escapement time series (not smoothed) and status for year $i$ was determined by comparing the geometric average (3 year window, ending with year $i$) with the benchmark. 
 <!-- 
 Sue Grant: It would be helpful to start the paper with this context on all the different ways to assess relative abundance BMs…Sgen SR models, Sgen habitat, percentiles…
 Maybe that is what the guidelines paper does is put this all together?
@@ -72,13 +67,6 @@ Maybe that is what the guidelines paper does is put this all together?
 KH Respsonse: This is what the guidelines paper does, but I think there is a benefit in developing a table or something that clearly lays out all the options, and which ones are being looked at in each case study.  
 
 -->
-
-
-<!--
-CW: I am not sure that the time series bias comment is super relevant here (as we are not using Sgen for the Chum case.)
-CH: I agree, ans suggest removing the last sentence above.
-
---> 
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -99,16 +87,10 @@ Productivity& >4 & 25th (lower)  50th (upper) & 25th (lower) 50th (upper) & 25th
 
 
 @holtEvaluatingBenchmarksBiological2018 recommended different percentiles to be used based on Ricker $\alpha$ and average harvest rate (figure \@ref(tab:holt-tab6)). Based on these recommendations, Georgia Strait and Howe Sound Burrard Inlet fall in the category of using 25^th^ percentile as a lower benchmark (Ricker $\alpha$ 2.5-4, harvest rate 20-40%). Loughborough, Northeast Vancouver Island, and Upper Knight ($\alpha$ 1.5-2.5 and harvest rate 0-20%) had a 50^th^ percentile lower benchmark recommended. Bute Inlet ($\alpha$ 1.5-2.5, harvest rate 20-40%) needed further evaluation and percentile benchmarks were not recommended. Percentile benchmarks were also not recommended for Southern Coastal Streams due to low productivity ($\alpha$ <1.5). Thus, we used 25% of spawner abundance as a benchmark for Georgia Strait and Howe Sound Burrard Inlet, 50% for Loughborough, Northeast Vancouver Island, Upper Knight, and did not use percentile benchmarks for Bute Inlet and Southern Coastal Streams. 
- <!--
-    CW: I think that there might be some value in including the benchmarks used for each CU in a table, in addition to this text. Just for quick reference. 
-    
-  LW: add to CU summary table? 
- -->
- 
 
 The methods for applying the multi-dimensional status assessment for CU status is described in Chapter 2. 
 
-In applying the multi-dimensional rapid status assessment to ISC Chum, we used the percentile benchmarks as recommended in @holtEvaluatingBenchmarksBiological2018 for relative abundance benchmarks <!-- maybe take out term 'relative' and just call them abundance-based CU benchmarks? I don't think we use the term 'relative abundance' benchmarks in other places in the paper, so may be confusing to use it now. (I also find the term confusing)  I guess it depends how much we want to borrow from the SOTS language here-->for the five CUs that have appropriate percentiles identified. For Bute Inlet and Southern Coastal Streams, we did not use relative abundance benchmarks. When relative abundance benchmarks are not available, <!--CH: suggest changing last phrase to, "trends were used to assess status according to the decision tree (ref and Fig in Ch2)"-->the decision tree was used assesses trends instead. 
+In applying the Salmon Scanner to ISC Chum, we used the percentile benchmarks as recommended in @holtEvaluatingBenchmarksBiological2018 for abundance-based benchmarks for the five CUs that have appropriate percentiles identified. For Bute Inlet and Southern Coastal Streams, we did not use relative abundance benchmarks. When relative abundance benchmarks are not available, <!--CH: suggest changing last phrase to, "trends were used to assess status according to the decision tree (ref and Fig in Ch2)"-->the decision tree was used assesses trends instead. 
 
 <!-- How were the appropriate percentiles identified? or was it from the @holtEvaluatingBenchmarksBiological2018?. 
     -->
@@ -120,7 +102,7 @@ CW: I suggest we re structure this section so that it is consistent with the IFc
 With the following headings:  (CH agree)
 
 ## LRP ESTIMATION: PROPORTION OF CUS
-### Methods (including CU status based on a single metric and the Rapid Multidimensional Scanner Tool)
+### Methods (including CU status based on a single metric and the Salmon Scanner)
 ### Results (for both methods for deriving CU status)
 ## LRP ESTIMATION: AGGREGATE ABUNDANCE LOGISTIC REGRESSION LRPS
  No methods and results, just mention that the method was not applicable. 
@@ -138,7 +120,7 @@ A simple method to set a LRP for a group of CUs is to set the LRP trigger as bei
 
 We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between xxxx and xxxx the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC-NF Chum SMU to be classified as being above the LRP. -->
 
-<!--CH: I suggest prefacing this with why we evaluated different data scenarios, e.g., "The single-metric approach to assessing CU status based on percentiles has specific data requirements (Holt et al. 2018) while the multidimensional approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we evaluated several data streams including those that used the same data for each method and all available data for each method."-->We evaluated six different combinations of data and LRP methods (table \@ref(tab:LRP-scenarios)). For scenarios 1 and 2, we used CU status based on percentile benchmarks. For this comparison, we used static benchmarks (not retrospective) using the full data set, and percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. <!-- To do: Need to better explain what 'static' benchmark means; based on comment from Sue Grant.  CH comment: I suggest removing the term "static benchmark" and simply describe that the benchmarks were estimated using the entire time-series, and applied to each year to derive a time-series of statuses (unlike retrospective analyses described below and for IFR coho where benchmarks were iteratively re-estimated each year) -->  <!--CH: I suggest explaining the difference between scenarios 1 and 2 a bit more, e.g., "For scenarios 1 and 2, we used CU status based on percentile benchmarks that are limited by constraints in productivity in historical exploitation outlined in Holt et al. (2018). Also, we initially constrained time-series so that each CU contained data for each year included in total proportions (i.e.., no missing CU-statuses, Scenario 1). We then relaxed this assumption and included all CUs that meet the constraints of Holt et al. (2018) even if CUs had missing data for some years (Scenario 2). This scenario resulted in total number of CUs in the proportion based LRP what differed among years. The power to detect red status varied among years in Scenrio 2, using more of the available data than Scenario 1. "--> This method used the raw annual escapement values to calculate the benchmarks and the generational mean (geometric mean of 4 years) of escapement in the given year and previous 3 years to assess status in a given year. For scenarios 3-6, we used multi-dimensional status of CUs. The multi-dimensional assessment used percentile benchmarks as relative abundance benchmarks, and also compares the generational geometric mean to assess status relative these benchmarks for each year. <!--CH: scenarios 3-6 might need a bit more justification, as above for scenarios 1 and 2?-->
+<!--CH: I suggest prefacing this with why we evaluated different data scenarios, e.g., "The single-metric approach to assessing CU status based on percentiles has specific data requirements (Holt et al. 2018) while the Salmon Scannerapproach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we evaluated several data streams including those that used the same data for each method and all available data for each method."-->We evaluated six different combinations of data and LRP methods (table \@ref(tab:LRP-scenarios)). For scenarios 1 and 2, we used CU status based on percentile benchmarks. For this comparison, we used static benchmarks (not retrospective) using the full data set, and percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. <!-- To do: Need to better explain what 'static' benchmark means; based on comment from Sue Grant.  CH comment: I suggest removing the term "static benchmark" and simply describe that the benchmarks were estimated using the entire time-series, and applied to each year to derive a time-series of statuses (unlike retrospective analyses described below and for IFR coho where benchmarks were iteratively re-estimated each year) -->  <!--CH: I suggest explaining the difference between scenarios 1 and 2 a bit more, e.g., "For scenarios 1 and 2, we used CU status based on percentile benchmarks that are limited by constraints in productivity in historical exploitation outlined in Holt et al. (2018). Also, we initially constrained time-series so that each CU contained data for each year included in total proportions (i.e.., no missing CU-statuses, Scenario 1). We then relaxed this assumption and included all CUs that meet the constraints of Holt et al. (2018) even if CUs had missing data for some years (Scenario 2). This scenario resulted in total number of CUs in the proportion based LRP what differed among years. The power to detect red status varied among years in Scenrio 2, using more of the available data than Scenario 1. "--> This method used the raw annual escapement values to calculate the benchmarks and the generational mean (geometric mean of 4 years) of escapement in the given year and previous 3 years to assess status in a given year. For scenarios 3-6, we used multi-dimensional status of CUs. The multi-dimensional assessment used percentile benchmarks as relative abundance benchmarks, and also compares the generational geometric mean to assess status relative these benchmarks for each year. <!--CH: scenarios 3-6 might need a bit more justification, as above for scenarios 1 and 2?-->
 
 <!-- CW: I think I need a little bit more explanation on the methods used here.
 
@@ -231,7 +213,7 @@ knitr::include_graphics('figure/fig_percentile_bm_rel_abd.png')
 
 **CU Status Based on Multi-Dimensional Status**
 
-<!--CH: We have decided to use "Rapid Multidimensional Scanner Tool" to refer to this approach everywhere, unless it's too awkward(i.e., repeating in the same sentence) in which case it can perhaps be shortened by "multidimensional approach"-->
+<!--CH: We have decided to use "Salmon Scanner" to refer to this approach everywhere, unless it's too awkward(i.e., repeating in the same sentence) in which case it can perhaps be shortened by "Salmon Scannerapproach"-->
 
 Using this method, two out of five CUs with data in the most recent year of data (2018) would be above their lower benchmark (amber or green zone) and 3 would be below (red zone. Over the time series, status for Howe Sound-Burrard Inlet and Georgia Strait has improved, while status in other CUs has declined or switched from green to red several times. 
 
@@ -256,7 +238,7 @@ knitr::include_graphics('figure/fig_status_by_CU_perc_RelAbd.png')
 <!--KH: you could start off this section with a blanket statement along the lines of:
 The ISC-NF Chum SMU was consistently below the LRP for large portions of the historical time series, regardless of which LRP estimation method. While the aggregate SMU abundance time series increased over time, SMU status remained below the LRP in every year of the past two decades except 20xx for all estimation methods. These results were mainly due to the tendency of Georgia Strait and Burrard Inlet-Howe Sound CUs to have high and increasing abundances while smaller CUs, such as Southern Coastal Streams, remained low.-->
 
-LRP status based on percentile benchmarks had more years below the LRP <!-- than LRP status based on the rapid mutlidimensional scanning tool--> multidimensional status (Figure \@ref(fig:chum-LRP-compare), Table \@ref(tab:LRP-scenarios)). Comparing scenarios 1 and 3 (same data) in a given year, ISC Chum were below the LRP based on percentile benchmarks but above it based on decision tree. Scenarios 2 and 6 (same data, more data than 1 and 3) show a similar pattern. <!-- KH: Can you describe why this is? When the multidimensional gets applied to 4CUs full, do all CUs in all years use the percentile criteria?  If so, I would expect them to be the same.  Or, are there some years where the mutidim uses trends for the 4 CUs full? -->  <!--CH: the same for scenario 2 and 6 (5 CUs partial). If they use the same percentile data for those 5 CUs, they should get the same result unless an absolute threshold is breached and a different branch of the tree is used in the Rapid Multidimentaional Scanner Tool? If so, it would be useful describing this explicitly--> <!--CH: is there a difference in raw vs smoothed values used in our percentile assessment vs. the SOS Scanner Tool (we should use gen averages), or in the estimation of percentile-based benchmarks (I see we have used raw values, which I think makes sense and is consistent with Holt et al. 2018, p.9)-->
+LRP status based on percentile benchmarks had more years below the LRP <!-- than LRP status based on the Salmon Scanner--> Salmon Scanner status (Figure \@ref(fig:chum-LRP-compare), Table \@ref(tab:LRP-scenarios)). Comparing scenarios 1 and 3 (same data) in a given year, ISC Chum were below the LRP based on percentile benchmarks but above it based on decision tree. Scenarios 2 and 6 (same data, more data than 1 and 3) show a similar pattern. <!-- KH: Can you describe why this is? When the Salmon Scannergets applied to 4CUs full, do all CUs in all years use the percentile criteria?  If so, I would expect them to be the same.  Or, are there some years where the mutidim uses trends for the 4 CUs full? -->  <!--CH: the same for scenario 2 and 6 (5 CUs partial). If they use the same percentile data for those 5 CUs, they should get the same result unless an absolute threshold is breached and a different branch of the tree is used in the Rapid Multidimentaional Scanner Tool? If so, it would be useful describing this explicitly--> <!--CH: is there a difference in raw vs smoothed values used in our percentile assessment vs. the SOS Scanner Tool (we should use gen averages), or in the estimation of percentile-based benchmarks (I see we have used raw values, which I think makes sense and is consistent with Holt et al. 2018, p.9)-->
 
 In this case study, adding more data changed the number of years that the SMU was below the LRP. Scenario 5 (most data) had the most years below the LRP. Comparing scenarios 1 and 2, which are both based on percentile benchmarks, including more data (scenario 2) results in more years below the LRP. Comparing scenarios 4 and 5 (decision tree only), including more observations results in one year switching from above the LRP to below it.<!--CH: Actually, I think it switched from having no data for that year to below thte LRP when more data were included--> Comparing scenarios 5 and 6 (where scenario 6 had two fewer CUs than scenario 5), including the two CUs in scenario 5 results in three years switching from above the LRP to below <!--CH: again this is switching from no data to below LRP, correct?-->. Other applications may result in different outcomes of including more data based on the status of additional CUs or years. <!--CH. It's not clear what "other applications" means here. I suggest omitting the last sentence, and then in the discussion mentioning the role of adding data--> 
 
@@ -383,7 +365,7 @@ Estimating relative-abundance <!-- replace 'relative-abundance' with 'abundance-
 
 
 
-**Multidimensional**
+**Salmon Scanner**
 
 Useful for mixture of data qualities/types/BM e.g., some CUs didn't have appropriate RelAbdundance benchmarks. <!-- Follwing text added by Sue Grant:-->This approach has been tested on a variety of data types, including those with and without relative abundance benchmarks. Like any approach to assess LRP’s, the underlying data, and benchmarks applied if relative abundance benchmarks can be used should be verified by experts. There are examples in Fraser Sockeye or with Fraser IFC, where it relied on trend metrics only, so can relate to data types that are data limited for Chum.
 
@@ -458,7 +440,7 @@ KH suggestions for overall discussion topics for this chapter:
 
 1) What are the unique characteristics of this case study that can inform the development of guidelines
 
-- No reliable SR parameter estimates; needed to rely on more data-poor methods that assessed CU status based on abundance relative to percentile benchmarks and trends within the rapid multidimensional scanning tool. High levels of missing data also required decisions to be made about which CUs to include in which years.  We used this case study to explore how sensitive proportional-based LRPs were to these decisions about number of CUs and number of years of data. 
+- No reliable SR parameter estimates; needed to rely on more data-poor methods that assessed CU status based on abundance relative to percentile benchmarks and trends within the rapid Salmon Scanner. High levels of missing data also required decisions to be made about which CUs to include in which years.  We used this case study to explore how sensitive proportional-based LRPs were to these decisions about number of CUs and number of years of data. 
 
 
 2) What are the required assumptions and limitations of percentile benchmarks, and where they a concern for this case study?  How do the recommendations of when / how to use them by Holt et al. need to be carried over when applying them to LRP estimation?
@@ -467,7 +449,7 @@ KH suggestions for overall discussion topics for this chapter:
 - Recommendations for future research / monitoring in order to support their use???
 
 
-3) How did using the rapid multidimensional scanning tool increase the level of information used to assess SMU status compared to the single metric approach that used percentiles?
+3) How did using the Salmon Scanner increase the level of information used to assess SMU status compared to the single metric approach that used percentiles?
 
 - e.g., it allowed all 7 CUs to be included when assessing SMU status by allowing alternative trend-based metrics to be considered, trends could be used when no appropriate percentile benchmarks for Bute Inlet and Southern Coastal Stream CUs. The 7 CU partial case was the most precautionary of the scenarios considered. (CH: as this approach used the most data! see my point below item 4)
 
